--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,3 +61,8 @@ jobs:
           force_orphan: true
         env:
           DEBUG: actions-gh-pages
+
+      - name: Create index.html for GitHub Pages
+        if: always()
+        run: |
+          echo '<html><head><meta http-equiv="refresh" content="0; url=./mochawesome.html"></head><body><p>Redirecting to Mochawesome report...</p></body></html>' > cypress/reports/mochawesome-report/index.html
