--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,12 +47,14 @@ jobs:
           name: cypress-videos
           path: cypress/videos
           if-no-files-found: ignore
-
+      
       - name: Create index.html for GitHub Pages
         if: always()
         run: |
           echo '<html><head><meta http-equiv="refresh" content="0; url=./mochawesome.html"></head><body><p>Redirecting to Mochawesome report...</p></body></html>' > cypress/reports/mochawesome-report/index.html
           ls -la cypress/reports/mochawesome-report
+          cat cypress/reports/mochawesome-report/index.html
+          ls -la cypress/reports/mochawesome-report/mochawesome.html || echo "mochawesome.html não encontrado"
       
       - name: Deploy Mochawesome Report to GitHub Pages
         if: always()
