--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
           name: mochawesome-report
           path: cypress/reports/mochawesome-report/mochawesome.html
           if-no-files-found: ignore
-          
+
       - name: Debug Report Files
         run: ls -la cypress/reports cypress/reports/mochawesome-report || echo "Pasta não encontrada"
       
@@ -69,10 +69,11 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./cypress/reports/mochawesome-report
-          destination_dir: .
+          destination_dir: reports/${{ github.run_id }}
           publish_branch: gh-pages
           user_name: 'github-actions[bot]'
           user_email: 'github-actions[bot]@users.noreply.github.com'
-          force_orphan: true
+          force_orphan: false
+          keep_files: true
         env:
           DEBUG: actions-gh-pages
