--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
   "dependencies": {},
   "devDependencies": {
     "cypress": "13.15.0",
-    "cypress-mochawesome-reporter": "^4.0.2"
+    "cypress-mochawesome-reporter": "3.8.2"
   }
 }
