--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,36 @@
-node_modules
+# Dependencies
+node_modules/
+npm-debug.log*
+
+# Cypress artifacts - MUITO IMPORTANTE!
+cypress/videos/
+cypress/screenshots/
+cypress/reports/
+cypress/results/
+mochawesome-report/
+reports/
+
+# Specific report files
+*.html
+mochawesome.json
+mochawesome-report.json
+cypress-mochawesome-reporter.json
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Test artifacts
+test-results/
+coverage/
