--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "cy:report": "cypress run --reporter cypress-mochawesome-reporter --browser chrome --headless --no-sandbox --disable-gpu"
+    "cy:report": "cypress run --browser chrome --headless --reporter cypress-mochawesome-reporter"
   },
   "keywords": [],
   "author": "",
