--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
   },
   "scripts": {
     "test": "npx cypress run --browser chrome --headless --reporter cypress-mochawesome-reporter",
-    "cy:report": "npx cypress run --browser electron --headless --reporter cypress-mochawesome-reporter"
+    "cy:report": "npx cypress run --browser electron --headless --reporter cypress-mochawesome-reporter || echo 'Cypress falhou, mas seguimos com o relatório'"
   }
 }
